# the-cheapest

./: LICENSE  README.md  pyproject.toml
src/the_cheapest/: app.py  competitors.db  products.db
src/the_cheapest/templates/: base.html  competitor_edit.html  competitors.html  dashboard.html  index.html  login.html  product_edit.html  products.html
