[tool.poetry]
name = "the-cheapest"
version = "0.1.0"
description = "App for comparing the prices of specific products at specific sellers"
authors = ["czesky"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
